# hybrid-entailment-hallucination-detection

./: LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: run_demo.py
src/hallucination_guard/: __init__.py  models.py  pipeline.py
src/hallucination_guard/correction/: __init__.py  gated_corrector.py
src/hallucination_guard/evaluation/: __init__.py  metrics.py
src/hallucination_guard/retrieval/: __init__.py  bm25_retriever.py
src/hallucination_guard/verification/: __init__.py  claim_extractor.py  nli_verifier.py
tests/: test_bm25_retriever.py  test_claim_extractor.py
